--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
     <spark.version>${spark.scala-2.11.version}</spark.version>
     <hive.version>3.0.0</hive.version>
     <commons-codec.version>1.9</commons-codec.version>
-    <guava.version>15.0</guava.version>
+    <guava.version>27.1-jre</guava.version>
     <httpclient.version>4.5.3</httpclient.version>
     <httpcore.version>4.4.4</httpcore.version>
     <jackson.version>2.9.8</jackson.version>
